feat: add loader component

--- a/calculator/public/locales/spanish/spanish.locale.json
+++ b/calculator/public/locales/spanish/spanish.locale.json
@@ -1,5 +1,5 @@
 {
-  "clear": "borrar la historia",
+  "clear": "Borrar la historia",
   "settings": "Ajustes",
   "darkTheme": "Tema oscuro",
   "lightTheme": "Tema de luz",
