feat: implement calculator logic, history, adaptive layout, monochromed theme, refactor styles and code

--- a/calculator/public/locales/chinese/chinese.locale.json
+++ b/calculator/public/locales/chinese/chinese.locale.json
@@ -4,6 +4,7 @@
   "darkTheme": "深色主題",
   "lightTheme": "淺色主題",
   "coloredTheme": "彩色主題",
+  "monochromedTheme": "單色主題",
   "title": "計算器",
   "home": "家",
   "history": "歷史",
