--- a/calculator/public/locales/hindi/hindi.locale.json
+++ b/calculator/public/locales/hindi/hindi.locale.json
@@ -4,6 +4,7 @@
   "darkTheme": "डार्क थीम",
   "lightTheme": "लाइट थीम",
   "coloredTheme": "रंगीन विषय",
+  "monochromedTheme": "मोनोक्रोम थीम",
   "title": "कैलकुलेटर",
   "home": "घर",
   "history": "इतिहास",
