--- a/calculator/public/locales/russian/russian.locale.json
+++ b/calculator/public/locales/russian/russian.locale.json
@@ -4,6 +4,7 @@
   "darkTheme": "Тёмная тема",
   "lightTheme": "Светлая тема",
   "coloredTheme": "Цветная тема",
+  "monochromedTheme": "Монохромная тема",
   "title": "Калькулятор",
   "home": "Главная",
   "history": "История",
