--- a/calculator/public/locales/spanish/spanish.locale.json
+++ b/calculator/public/locales/spanish/spanish.locale.json
@@ -4,6 +4,7 @@
   "darkTheme": "Tema oscuro",
   "lightTheme": "Tema de luz",
   "coloredTheme": "Tema coloreado",
+  "monochromedTheme": "Tema monocromático",
   "title": "Calculadora",
   "home": "Hogar",
   "history": "Historia",
