--- a/calculator/public/locales/english/english.locale.json
+++ b/calculator/public/locales/english/english.locale.json
@@ -4,6 +4,7 @@
   "darkTheme": "Dark theme",
   "lightTheme": "Light theme",
   "coloredTheme": "Colored theme",
+  "monochromedTheme": "Monochromed theme",
   "title": "Calculator",
   "home": "Home",
   "history": "History",
